# SBH-Chatbot

./: .gitignore  .replit  README.md  clean.py  diagnostic.py  mega_scraper.py  pyproject.toml  requirements.txt
eval_logs/: eval_results_20260403_200708.csv
qdrant_db/: meta.json
qdrant_db/collection/salem_balhamer_knowledge/: storage.sqlite
scripts/: cleaner.py  indexer.py  rag_evaluation_pipeline.py  test_db.py
src/: API.md  Salem_Balhamer_RAG_Evaluation_Set.json  api.py  app.py  bulk_test.py  core_logic.py  indexer.py  ingest.py  main.py  qdrant_correctness.py  query_test.py
